fix about display on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -158,13 +158,13 @@ ul.buttons {
 }
 
 #about_image {
-	width: 70%;
-	margin: 1em 5em 1em 5em;
+	width: 80%;
+	margin: 1em 2em 1em 2em;
 }
 
 #about_text {
 	width: 80%;
-	margin: 1em 5em 1em 5em;
+	margin: 1em 2em 1em 2em;
 	padding: 0.5em 1em 0.5em 1em;
 }
 
